# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
    "ballista-cli",
    "ballista/cache",
    "ballista/client",
    "ballista/core",
    "ballista/executor",
    "ballista/scheduler",
    "benchmarks",
    "examples",
]
exclude = ["dependencies/arrow-datafusion"]

[workspace.dependencies]
arrow = { version = "38.0.0" }
arrow-flight = { version = "38.0.0", features = ["flight-sql-experimental"] }
configure_me = { version = "0.4.0" }
configure_me_codegen = { version = "0.4.4" }
datafusion = { path = "dependencies/arrow-datafusion/datafusion/core" }
datafusion-cli = { path = "dependencies/arrow-datafusion/datafusion-cli" }
datafusion-proto = { path = "dependencies/arrow-datafusion/datafusion/proto" }
object_store = "0.5.4"
sqlparser = "0.33.0"
tonic = { version = "0.9" }
tonic-build = { version = "0.9", default-features = false, features = [
    "transport",
    "prost",
] }

# cargo build --profile release-lto
[profile.release-lto]
codegen-units = 1
inherits = "release"
lto = true

# the release profile takes a long time to build so we can use this profile during development to save time
# cargo build --profile release-nonlto
[profile.release-nonlto]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
